<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Progress</string>
    <string name="action_settings">Settings</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <!-- REGISTER FORM-->
    <string name="register_Name">Name</string>
    <string name="register_Password">Password</string>
    <string name="register_Email">Email</string>
    <string name="register_Register">Register</string>
    <string name="register_AlreadySignedIn"><u>Are you already registered? Sign in!</u></string>
    <string name="register_CreateUser">Complete all the fields.</string>

    <!-- LOGIN FORM-->
    <string name="login_button">Login</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title">Login to Progress</string>

    <!-- MAIN MENU-->
    <string name="menu_settings">Settings</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_snapshot">Snapshot</string>
    <string name="menu_progress">Progress</string>
    <string name="menu_social">Social</string>
    <string name="menu_memory">Memory Lane</string>
    <string name="menu_privacypolicy"><u>Privacy Policy</u></string>

    <!-- SNAPSHOT MENU-->
    <string name="snapshot_share">Share</string>
    <string name="snapshot_new">New photo</string>
    <string name="snapshot_save">Save photo</string>
    <string name="snapshot_saved">Photo saved.</string>
    <string name="snapshot_notsaved">Save your photo first.</string>
    <string name="snapshot_pickimages">Pick your images</string>
    <string name="snapshot_menu">Take new snapshot</string>
    <string name="snapshot_menu_question">Are you sure you want to take another snapshot?</string>
    <string name="snapshot_cancel_after">Action cancelled.</string>
    <string name="snapshot_invalid_image">The selected picture does not exist.</string>
    <!--WEIGHT WATCH-->
    <string name="weight_enter">Enter your current weight</string>
    <string-array name="list_measure">
        <item>lbs</item>
        <item>kg</item>
    </string-array>
    <string name="weight_btn">Check-in!</string>
    <string name="weight_validation">Incorrect weight.</string>

    <!--PHOTO PICKER-->
    <string name="photo_chooser">You clicked </string>
    <string name="photo_wait">Downloading images... </string>
    <string name="hello_world">Hello</string>

    <!--SOCIAL-->
    <string name="social_facebook">Follow us on Facebook</string>
    <string name="social_twitter">Follow us on Twitter</string>
    <string name="social_instagram">Follow us on Instagram</string>

    <!--MEMORY LANE-->
    <string name="memory_noimages">You have no Progress images.</string>

</resources>
