<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#ff000000"
    tools:context=".SocialActivity"
    android:parentActivityName="android.massoluciones.com.progress.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imgSocial"
        android:src="@drawable/ic_social"
        android:layout_alignParentEnd="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="@dimen/size20dp"
            android:layout_marginEnd="@dimen/size20dp"
            android:layout_weight="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_facebook"
                android:id="@+id/btnSocialFacebook"
                android:layout_gravity="bottom"
                style="@style/buttonfacebook"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="@dimen/size20dp"
            android:layout_marginEnd="@dimen/size20dp"
            android:layout_weight="2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_twitter"
                android:id="@+id/btnSocialTwitter"
                android:layout_gravity="center_vertical"
                style="@style/buttontwitter"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="@dimen/size20dp"
            android:layout_marginEnd="@dimen/size20dp"
            android:layout_weight="2">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/social_instagram"
                android:id="@+id/btnSocialInstagram"
                android:layout_gravity="top"
                style="@style/buttoninstagram"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>